[package]
name = "biot_savart"
version = "0.1.0"
authors = ["william <zrf802@alumni.ku.dk>"]
edition = "2018"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "biot_savart"
crate-type = ["cdylib"]

[dependencies]
simdeez = "0.6.4"
itertools = "0.8"

[dependencies.pyo3]
version = "0.8.1"
features = ["extension-module"]

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]
